corrected h1 title font sizes on iPhone 4 and 5 devices

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
     transition: color 0.4s ease-in-out;
  }
  h1 {
-   font-size:60px;
+   font-size:50px;
    font-style:normal;
    font-weight:700;
    line-height: 1.3;
@@ -172,9 +172,12 @@ a{
   text-decoration: none;
   color: #4B4B4B;
 }
-     
-/* Projects */
 
+@media (min-width: 360px)  {
+    h1{
+        font-size: 60px;
+    }
+}
 
 @media (min-width: 768px)  {
   .body{
@@ -182,7 +185,7 @@ a{
   }
   .intro{
    padding-top: 250px;
-   max-width: 525px;
+   max-width: 660px;
   }
   .first-intro{
    padding-bottom: 50px;
